tests/src/frontend/visibility/invalid/with_visibility_1.sk
class Foo private (x: void)

fun test(f: Foo): void {
  f.x;
  !f.x = void
}
